<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/topbar_height"
        android:background="@drawable/rect_blue_gradient">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="@dimen/topbar_height"
            android:layout_height="@dimen/topbar_height"
            android:src="@drawable/nav_back"
            android:background="@color/color_transparent"/>

        <TextView
            android:id="@+id/txt_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/topbar_height"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_centerVertical="true"
            android:lines="1"
            style="@style/search_view"
            android:text="@string/select_search_content" />
    </RelativeLayout>

    <TextView
        style="@style/layout_mw"
        android:layout_marginTop="@dimen/topbar_height"
        android:textColor="@color/txt_gray_light"
        android:textSize="@dimen/text_size_14"
        android:text="@string/search_content"
        android:gravity="center_horizontal"/>

    <LinearLayout
        style="@style/layout_mm"
        android:padding="@dimen/margin_large"
        android:orientation="vertical">

        <LinearLayout
            style="@style/layout_mw"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_familiar"
                style="@style/layout_0w"
                android:layout_height="@dimen/login_button_height"
                android:textSize="@dimen/text_size_14"
                android:textColor="@color/txt_dark"
                android:background="@drawable/round_rect_gray_white"
                android:text="@string/familiar"/>
            <Button
                android:id="@+id/btn_enterprise"
                style="@style/layout_0w"
                android:layout_height="@dimen/login_button_height"
                android:layout_marginLeft="@dimen/margin_large"
                android:textSize="@dimen/text_size_14"
                android:textColor="@color/txt_dark"
                android:background="@drawable/round_rect_gray_white"
                android:text="@string/enterprise"/>
            <Button
                android:id="@+id/btn_comedity"
                style="@style/layout_0w"
                android:layout_height="@dimen/login_button_height"
                android:layout_marginLeft="@dimen/margin_large"
                android:textSize="@dimen/text_size_14"
                android:textColor="@color/txt_dark"
                android:background="@drawable/round_rect_gray_white"
                android:text="@string/comedity"/>
        </LinearLayout>

        <LinearLayout
            style="@style/layout_mw"
            android:layout_marginTop="@dimen/margin_large"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_item"
                style="@style/layout_0w"
                android:layout_height="@dimen/login_button_height"
                android:textSize="@dimen/text_size_14"
                android:textColor="@color/txt_dark"
                android:background="@drawable/round_rect_gray_white"
                android:text="@string/item" />

            <Button
                android:id="@+id/btn_serve"
                style="@style/layout_0w"
                android:layout_height="@dimen/login_button_height"
                android:layout_marginLeft="@dimen/margin_large"
                android:textSize="@dimen/text_size_14"
                android:textColor="@color/txt_dark"
                android:background="@drawable/round_rect_gray_white"
                android:text="@string/serve"/>
            <Button
                android:id="@+id/btn_chengxin_number"
                style="@style/layout_0w"
                android:layout_height="@dimen/login_button_height"
                android:layout_marginLeft="@dimen/margin_large"
                android:textSize="@dimen/text_size_14"
                android:textColor="@color/txt_dark"
                android:background="@drawable/round_rect_gray_white"
                android:text="@string/chengxin_number"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>