<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_white"
    tools:context="com.beijing.chengxin.ui.activity.LoginActivity"
    android:paddingLeft="@dimen/margin_extra"
    android:paddingRight="@dimen/margin_extra"
    android:gravity="center"
    android:orientation="vertical">

	<View style="@style/layout_m0"/>

	<ImageView
		style="@style/layout_ww"
		android:src="@drawable/login_logo"
        android:contentDescription="@string/img_descript"/>

	<View style="@style/layout_m0"/>

    <LinearLayout
        style="@style/layout_mw"
        android:paddingTop="@dimen/margin_small"
        android:paddingBottom="@dimen/margin_small"
        android:orientation="horizontal">

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/phone_number_prefix"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/txt_gray"/>

        <View style="@style/vertical_splite_line" />

        <EditText
            android:id="@+id/edit_phone_number"
            style="@style/layout_0w"
            android:layout_height="@dimen/login_button_height"
            android:background="@color/color_transparent"
            android:paddingStart="@dimen/margin_small"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/txt_gray"
            android:lines="1"
            android:inputType="number"
            android:maxLength="11"
            android:hint="@string/input_phone_number"
            android:textColorHint="@color/txt_gray_light"/>

    </LinearLayout>

    <View style="@style/splite_line_gray" />

    <LinearLayout
        style="@style/layout_mw"
        android:paddingTop="@dimen/margin_small"
        android:paddingBottom="@dimen/margin_small"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/txt_gray_light"/>

        <EditText
            android:id="@+id/edit_password"
            style="@style/layout_0w"
            android:layout_height="@dimen/login_button_height"
            android:paddingStart="@dimen/margin_small"
            android:background="@color/color_transparent"
            android:lines="1"
            android:inputType="textPassword"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/txt_gray" />

        <ToggleButton
            android:layout_width="19dp"
            android:layout_height="13dp"
            android:id="@+id/btn_eye"
            android:background="@drawable/btn_eye"
            android:checked="false"
            android:textOff=""
            android:textOn=""/>
    </LinearLayout>

    <View style="@style/splite_line_gray" />

    <RelativeLayout
        style="@style/layout_mw">
        <Button
            android:id="@+id/btn_forgot_pw"
            style="@style/layout_ww"
            android:background="@color/color_transparent"
            android:text="@string/forgot_password"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/txt_gray_light"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

	<Button
		android:id="@+id/btn_login"
		android:layout_width="match_parent"
		android:layout_height="@dimen/login_button_height"
		android:background="@drawable/round_rect_blue_gradient"
		android:layout_marginTop="@dimen/margin_normal"
		android:text="@string/login"
		android:textColor="@color/color_white"
		android:textSize="@dimen/text_size_14" />

    <LinearLayout
        style="@style/layout_ww"
        android:layout_marginTop="@dimen/margin_normal"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            style="@style/layout_ww"
            android:text="@string/has_no_account"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/txt_gray_light" />
        <Button
            android:id="@+id/btn_register"
            style="@style/layout_ww"
            android:background="@color/color_transparent"
            android:padding="0dp"
            android:text="@string/register_immediately"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/color_main_blue"
            android:layout_alignParentEnd="true"/>
    </LinearLayout>

    <View style="@style/layout_m0"/>
</LinearLayout>
