<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/color_white">

    <include
        android:layout_width="match_parent"
        android:layout_height="@dimen/topbar_height"
        layout="@layout/nav_bar" />

    <ScrollView
        style="@style/layout_m0">

        <LinearLayout
            style="@style/layout_mw"
            android:orientation="vertical">
            <LinearLayout
                style="@style/layout_mw"
                android:orientation="vertical"
                android:paddingTop="@dimen/margin_small">

                <TextView
                    style="@style/layout_mw"
                    android:padding="@dimen/margin_normal"
                    android:text="@string/str_sample_title"
                    android:textColor="@color/txt_dark"
                    android:textSize="@dimen/text_size_16"
                    android:textStyle="bold"/>

                <LinearLayout
                    style="@style/layout_mw"
                    android:padding="@dimen/margin_normal">

                    <TextView
                        style="@style/layout_ww"
                        android:textColor="@color/txt_gray_light"
                        android:textSize="@dimen/text_size_10"
                        android:text="@string/hot_detail_read_count"/>

                    <TextView
                        style="@style/layout_0w"
                        android:layout_marginLeft="@dimen/margin_normal"
                        android:textColor="@color/color_main_blue"
                        android:textSize="@dimen/text_size_10"
                        android:text="@string/str_sample"/>

                    <TextView
                        style="@style/layout_ww"
                        android:layout_alignParentRight="true"
                        android:textColor="@color/txt_gray_light"
                        android:textSize="@dimen/text_size_10"
                        android:text="@string/str_sample_datetime"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                style="@style/layout_mw"
                android:orientation="vertical"
                android:padding="@dimen/margin_normal">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/image_scroll_view_height"
                    android:background="@drawable/no_image"/>

                <TextView
                    style="@style/layout_mw"
                    android:paddingTop="@dimen/margin_normal"
                    android:textColor="@color/txt_gray"
                    android:textSize="@dimen/text_size_14"
                    android:text="@string/large_text"/>

            </LinearLayout>

            <View style="@style/splite_line_gray_8"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/top_tab_height"
                android:orientation="horizontal">
                <ToggleButton
                    android:id="@+id/btn_eval"
                    style="@style/person_tab_button"
                    android:checked="true"
                    android:textOn="@string/tab_eval"
                    android:textOff="@string/tab_eval"/>
                <ToggleButton
                    android:id="@+id/btn_profession"
                    style="@style/person_tab_button"
                    android:textOn="@string/hot_detail_profession"
                    android:textOff="@string/hot_detail_profession"/>
            </LinearLayout>

            <View style="@style/splite_line_gray_8" />

            <android.support.v4.view.ViewPager
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="220dp"/>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        style="@style/layout_mw"
        android:orientation="vertical">
        <View style="@style/splite_line_gray"/>
        <LinearLayout
            style="@style/layout_mw"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/margin_normal"
            android:paddingRight="@dimen/margin_normal"
            android:paddingTop="@dimen/margin_small"
            android:paddingBottom="@dimen/margin_small">
            <EditText
                android:id="@+id/edit_search"
                style="@style/layout_0m"
                android:layout_weight="4"
                android:layout_marginEnd="@dimen/margin_normal_top"
                android:layout_centerVertical="true"
                android:maxLines="1"
                android:background="@drawable/round_gray_white"
                android:drawableLeft="@drawable/icon_input"
                android:padding="@dimen/margin_normal"
                android:drawablePadding="@dimen/margin_normal"
                android:textColor="@color/txt_gray"
                android:textColorHint="@color/txt_gray_light"
                android:textSize="@dimen/text_size_14"
                android:hint="@string/think" />

            <TextView
                style="@style/layout_0w"
                android:drawableTop="@drawable/hot_evaluate"
                android:lines="1"
                android:gravity="center"
                android:text="@string/str_sample"/>

            <TextView
                style="@style/layout_0w"
                android:drawableTop="@drawable/hot_zan"
                android:lines="1"
                android:gravity="center"
                android:text="@string/str_sample"/>

            <TextView
                style="@style/layout_0w"
                android:drawableTop="@drawable/hot_collection_nor"
                android:lines="1"
                android:gravity="center"
                android:text="@string/str_collect"/>

            <TextView
                style="@style/layout_0w"
                android:drawableTop="@drawable/hot_share"
                android:lines="1"
                android:gravity="center"
                android:text="@string/str_share"/>

        </LinearLayout>

    </LinearLayout>



</LinearLayout>