<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_white"
    android:padding="@dimen/margin_normal"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/img_avatar"
        android:layout_width="@dimen/image_avatar_height"
        android:layout_height="@dimen/image_avatar_height"
        android:background="@drawable/no_image"
        android:scaleType="center"/>

    <LinearLayout
        style="@style/layout_0w"
        android:layout_marginLeft="@dimen/margin_normal"
        android:orientation="vertical">

        <LinearLayout
            style="@style/layout_mw"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txt_name"
                style="@style/layout_0w"
                android:text="@string/app_name"
                android:textSize="@dimen/text_size_14"
                android:textStyle="bold"
                android:textColor="@color/color_orange"/>
            <TextView
                android:id="@+id/txt_eval_count"
                style="@style/layout_ww"
                android:text="@string/front_eval"
                android:textSize="@dimen/text_size_12"
                android:textColor="@color/color_orange"/>
        </LinearLayout>

        <LinearLayout
            style="@style/layout_mw"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txt_eval_content"
                style="@style/layout_ww"
                android:layout_height="@dimen/row_height_normal"
                android:lines="2"
                android:gravity="center"
                android:text="@string/str_sample_eval"
                android:textSize="@dimen/text_size_14"
                android:textColor="@color/txt_gray"/>
        </LinearLayout>

        <LinearLayout
            style="@style/layout_mw"
            android:orientation="horizontal">
            <TextView
                style="@style/layout_ww"
                android:padding="@dimen/margin_small"
                android:text="@string/error_correct_time_dot"
                android:textSize="@dimen/text_size_10"
                android:textColor="@color/txt_gray"/>
            <TextView
                android:id="@+id/txt_time"
                style="@style/layout_0w"
                android:padding="@dimen/margin_small"
                android:text="@string/str_sample_date"
                android:textSize="@dimen/text_size_10"
                android:textColor="@color/txt_gray"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>